crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 67
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO
#define BAR

    int foo;
    int bar;

