crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_3-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 138
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      19,
      12,
      19
    ],
    [
      20,
      23,
      20,
      23
    ],
    [
      44,
      47,
      29,
      32
    ],
    [
      48,
      51,
      33,
      36
    ],
    [
      51,
      52,
      36,
      37
    ],
    [
      77,
      80,
      43,
      46
    ],
    [
      81,
      84,
      47,
      50
    ],
    [
      84,
      85,
      50,
      51
    ]
  ],
  "expanded_symbols": [
    [
      36,
      39,
      36,
      39,
      0,
      0
    ],
    [
      69,
      72,
      69,
      72,
      1,
      0
    ]
  ]
}
