crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_4-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 153
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      32,
      35,
      17,
      20
    ],
    [
      36,
      39,
      21,
      24
    ],
    [
      39,
      40,
      24,
      25
    ],
    [
      88,
      91,
      33,
      36
    ],
    [
      92,
      95,
      37,
      40
    ],
    [
      95,
      96,
      40,
      41
    ]
  ],
  "expanded_symbols": [
    [
      24,
      27,
      24,
      27,
      0,
      0
    ]
  ]
}
