crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_5-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      28,
      31,
      13,
      16
    ],
    [
      32,
      35,
      17,
      20
    ],
    [
      35,
      36,
      20,
      21
    ],
    [
      36,
      37,
      21,
      22
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 24,
        "end": 27
      },
      "expanded_range": {
        "start": 24,
        "end": 27
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
