crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_6-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 177
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      43,
      46,
      15,
      18
    ],
    [
      47,
      50,
      19,
      22
    ],
    [
      50,
      51,
      22,
      23
    ]
  ],
  "expanded_symbols": []
}
