crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_7-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      28,
      34,
      13,
      19
    ],
    [
      35,
      39,
      20,
      24
    ],
    [
      40,
      53,
      25,
      38
    ],
    [
      53,
      54,
      38,
      39
    ],
    [
      54,
      55,
      39,
      40
    ],
    [
      136,
      137,
      48,
      49
    ],
    [
      142,
      145,
      54,
      57
    ],
    [
      146,
      149,
      58,
      61
    ],
    [
      149,
      150,
      61,
      62
    ],
    [
      151,
      152,
      63,
      64
    ],
    [
      152,
      152,
      64,
      64
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 24,
        "end": 27
      },
      "expanded_range": {
        "start": 24,
        "end": 27
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
