crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_8-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      30,
      33,
      15,
      18
    ],
    [
      34,
      37,
      19,
      22
    ],
    [
      37,
      38,
      22,
      23
    ],
    [
      38,
      39,
      23,
      24
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 26,
        "end": 29
      },
      "expanded_range": {
        "start": 26,
        "end": 29
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
